--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.18'
+          go-version: '1.17'
       
       - uses: actions/checkout@v3
 
@@ -17,3 +17,16 @@ jobs:
         uses: golangci/golangci-lint-action@v3.2.0
         with:
           version: v1.29
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.17'
+
+      - name: Run go test
+        run:  make test
